; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/dsp/extr_upsampling.c_WebPGetLinePairConverter.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/dsp/extr_upsampling.c_WebPGetLinePairConverter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DualLineSamplerBGRA = common dso_local global i32 0, align 4
@DualLineSamplerARGB = common dso_local global i32 0, align 4
@MODE_ARGB = common dso_local global i64 0, align 8
@MODE_BGRA = common dso_local global i64 0, align 8
@WebPUpsamplers = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @WebPGetLinePairConverter(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 (...) @WebPInitUpsamplers()
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @DualLineSamplerBGRA, align 4
  br label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @DualLineSamplerARGB, align 4
  br label %10

10:                                               ; preds = %8, %6
  %11 = phi i32 [ %7, %6 ], [ %9, %8 ]
  ret i32 %11
}

declare dso_local i32 @WebPInitUpsamplers(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
